--- a/cards.css
+++ b/cards.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, Helvetica, sans-serif
+    font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     background-image: url('assets/images/background.webp');
     background-size: cover;
